--- a/DevApp/DevApp.csproj
+++ b/DevApp/DevApp.csproj
@@ -14,6 +14,21 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -72,6 +87,7 @@
     <Reference Include="DevExpress.XtraPrinting.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraVerticalGrid.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraWizard.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -95,7 +111,9 @@
     <Compile Include="Child Forms\XtraMDICaixaMgr.Designer.cs">
       <DependentUpon>XtraMDICaixaMgr.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataSource Classes\clsDSCaixaResumo.cs" />
     <Compile Include="Global\Globals.cs" />
+    <Compile Include="Helpers\BackgroundImageHelper.cs" />
     <Compile Include="Overrides\CustomBarLocalizer.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
@@ -154,6 +172,12 @@
     <Compile Include="Child Forms\XtraMDIBackground.Designer.cs">
       <DependentUpon>XtraMDIBackground.cs</DependentUpon>
     </Compile>
+    <Compile Include="WizardConfigureApp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WizardConfigureApp.Designer.cs">
+      <DependentUpon>WizardConfigureApp.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Child Forms\XtraMDICaixaMgr.resx">
       <DependentUpon>XtraMDICaixaMgr.cs</DependentUpon>
     </EmbeddedResource>
@@ -186,6 +210,12 @@
     <EmbeddedResource Include="Child Forms\XtraMDIBackground.resx">
       <DependentUpon>XtraMDIBackground.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WizardConfigureApp.pt-BR.resx">
+      <DependentUpon>WizardConfigureApp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WizardConfigureApp.resx">
+      <DependentUpon>WizardConfigureApp.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -199,6 +229,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
