--- a/DevApp/App.config
+++ b/DevApp/App.config
@@ -11,7 +11,7 @@
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value></value>
+        <value>Skin/Office 2013 Dark Gray</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
