--- a/DevApp/DevApp.csproj
+++ b/DevApp/DevApp.csproj
@@ -71,6 +71,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.BonusSkins.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Charts.v20.2.Core, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.CodeParser.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Data.Desktop.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -79,8 +80,12 @@
     <Reference Include="DevExpress.Mvvm.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v20.2.Core, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Utils.v20.2.UI, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Xpo.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraBars.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v20.2.UI, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v20.2.Wizard, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v20.2, Version=20.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -105,11 +110,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Child Forms\XtraMDICaixaMgr.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Child Forms\XtraMDICaixaHistory.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Child Forms\XtraMDICaixaMgr.Designer.cs">
-      <DependentUpon>XtraMDICaixaMgr.cs</DependentUpon>
+    <Compile Include="Child Forms\XtraMDICaixaHistory.Designer.cs">
+      <DependentUpon>XtraMDICaixaHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Child Forms\XtraMDICaixaManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Child Forms\XtraMDICaixaManager.Designer.cs">
+      <DependentUpon>XtraMDICaixaManager.cs</DependentUpon>
     </Compile>
     <Compile Include="DataSource Classes\clsDSCaixaResumo.cs" />
     <Compile Include="Global\Globals.cs" />
@@ -141,6 +152,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLite\Queries\clsCaixaHistQueries.cs" />
     <Compile Include="SQLite\Queries\clsCaixaQueries.cs" />
     <Compile Include="SQLite\Queries\clsUserQueries.cs" />
     <Compile Include="SQLite\SQLiteColumn.cs" />
@@ -148,23 +160,12 @@
     <Compile Include="SQLite\SQLiteHelper.cs" />
     <Compile Include="SQLite\SQLiteQueryHelper.cs" />
     <Compile Include="SQLite\SQLiteTable.cs" />
+    <Compile Include="Threads\clsCaixaThreads.cs" />
     <Compile Include="User Forms\WaitForm1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="User Forms\WaitForm1.Designer.cs">
       <DependentUpon>WaitForm1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Child Forms\XtraMDIClientsMgr.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Child Forms\XtraMDIClientsMgr.Designer.cs">
-      <DependentUpon>XtraMDIClientsMgr.cs</DependentUpon>
-    </Compile>
-    <Compile Include="User Forms\XtraLogin.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="User Forms\XtraLogin.Designer.cs">
-      <DependentUpon>XtraLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Child Forms\XtraMDIBackground.cs">
       <SubType>Form</SubType>
@@ -172,14 +173,23 @@
     <Compile Include="Child Forms\XtraMDIBackground.Designer.cs">
       <DependentUpon>XtraMDIBackground.cs</DependentUpon>
     </Compile>
+    <Compile Include="User Forms\XtraLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User Forms\XtraLogin.Designer.cs">
+      <DependentUpon>XtraLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="WizardConfigureApp.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="WizardConfigureApp.Designer.cs">
       <DependentUpon>WizardConfigureApp.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Child Forms\XtraMDICaixaMgr.resx">
-      <DependentUpon>XtraMDICaixaMgr.cs</DependentUpon>
+    <EmbeddedResource Include="Child Forms\XtraMDICaixaHistory.resx">
+      <DependentUpon>XtraMDICaixaHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Child Forms\XtraMDICaixaManager.resx">
+      <DependentUpon>XtraMDICaixaManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
@@ -201,14 +211,11 @@
     <EmbeddedResource Include="User Forms\WaitForm1.resx">
       <DependentUpon>WaitForm1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Child Forms\XtraMDIClientsMgr.resx">
-      <DependentUpon>XtraMDIClientsMgr.cs</DependentUpon>
+    <EmbeddedResource Include="Child Forms\XtraMDIBackground.resx">
+      <DependentUpon>XtraMDIBackground.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="User Forms\XtraLogin.resx">
       <DependentUpon>XtraLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Child Forms\XtraMDIBackground.resx">
-      <DependentUpon>XtraMDIBackground.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WizardConfigureApp.pt-BR.resx">
       <DependentUpon>WizardConfigureApp.cs</DependentUpon>
