--- a/DevApp/packages.config
+++ b/DevApp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dropbox.Api" version="6.2.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="sqlite-net-sqlcipher" version="1.7.335" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlcipher" version="2.0.4" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net472" />
